--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
   position: relative;
   min-height: 100vh; }
 
+#tapper {
+  width: 100%;
+  height: 100%;
+}
+
 .item {
   text-align: center;
   height: 33.33vh;
